[package]
name = "yaorust"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Fast minimal AUR + repo helper with root-safe build modes"
readme = "README.md"
repository = "https://github.com/darko5r/yaorust"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
which = "6.0"
tempfile = "3.10"
anyhow = "1.0"
thiserror = "1.0"
indicatif = "0.17"

[profile.release]
opt-level = 3
lto = "fat" 
codegen-units = 1
strip = "symbols"
panic = "abort"
debug-assertions = false
overflow-checks = false
incremental = false
